--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "@elysiajs/static": "^1.1.1",
     "@elysiajs/swagger": "^1.1.6",
     "cloudinary": "^2.5.1",
-    "elysia": "latest",
+    "elysia": "^1.2.10",
     "file-type": "^19.6.0",
     "mongoose": "^8.8.4"
   },
